crates/ars-components/src/utility/field/snapshots/ars_components__utility__field__tests__field_input_required.snap
---
source: crates/ars-components/src/utility/field/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "email-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
