crates/ars-components/src/utility/field/snapshots/ars_components__utility__field__tests__field_label_default.snap
---
source: crates/ars-components/src/utility/field/mod.rs
assertion_line: 784
expression: "snapshot_attrs(&service.connect(&|_| {}).label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Id,
            String(
                "email-label",
            ),
        ),
        (
            For,
            String(
                "email-input",
            ),
        ),
    ],
    styles: [],
}
