crates/ars-components/src/utility/field/snapshots/ars_components__utility__field__tests__field_root_default.snap
---
source: crates/ars-components/src/utility/field/mod.rs
assertion_line: 762
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Id,
            String(
                "email",
            ),
        ),
    ],
    styles: [],
}
