crates/ars-components/src/utility/field/snapshots/ars_components__utility__field__tests__field_root_rtl.snap
---
source: crates/ars-components/src/utility/field/mod.rs
assertion_line: 774
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "field",
            ),
        ),
        (
            Dir,
            String(
                "rtl",
            ),
        ),
        (
            Id,
            String(
                "email",
            ),
        ),
    ],
    styles: [],
}
